# ChatWeb_project

./: Fazer.txt  manage.py  pyproject.toml  requirements.txt
Amigo_app/: models.py
ChatWeb_project/: asgi.py  settings.py  urls.py  wsgi.py
Core_app/: urls.py  views.py
Core_app/components/: amigo.py  amigos.py  listar.py
Core_app/static/css/: navbarStyle.css
Core_app/templates/Core_app/: base.html  index.html  listar-pessoas.html
Core_app/templates/account/: base.html
Core_app/templates/unicorn/: navbar.html  root.html
Mensagem_app/: models.py
Perfil_app/: models.py
