[tool.poetry]
name = "chatweb-project"
version = "0.1.0"
description = "Um aplicativo web de chats"
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chatweb_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
